--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                         </td>
                      <tr>
                         <td>
-                            Is the application designed to facilitate change and ease of use by the user?
+                            14. Is the application designed to facilitate change and ease of use by the user?
                         </td>
                         <td>
                             <input checked type="radio" id="q14_0" name="q14" value="0">
@@ -573,6 +573,50 @@
                         </td>
                         <td>
                             <input type="radio" id="q14_5" name="q14" value="5">
+                        </td>
+		     <tr>
+                        <td>
+                            15. Does the application have categorized section of users?
+                        </td>
+                        <td>
+                            <input checked type="radio" id="q15_0" name="q15" value="0">
+                        </td>
+                        <td>
+                            <input type="radio" id="q15_1" name="q15" value="1">
+                        </td>
+                        <td>
+                            <input type="radio" id="q15_2" name="q15" value="2">
+                        </td>
+                        <td>
+                            <input type="radio" id="q15_3" name="q15" value="3">
+                        </td>
+                        <td>
+                            <input type="radio" id="q15_4" name="q15" value="4">
+                        </td>
+                        <td>
+                            <input type="radio" id="q15_5" name="q15" value="5">
+                        </td>
+	            <tr>
+                        <td>
+                            16. Does the input complexity vary for  each type of users?
+                        </td>
+                        <td>
+                            <input checked type="radio" id="q16_0" name="q16" value="0">
+                        </td>
+                        <td>
+                            <input type="radio" id="q16_1" name="q16" value="1">
+                        </td>
+                        <td>
+                            <input type="radio" id="q16_2" name="q16" value="2">
+                        </td>
+                        <td>
+                            <input type="radio" id="q16_3" name="q16" value="3">
+                        </td>
+                        <td>
+                            <input type="radio" id="q16_4" name="q16" value="4">
+                        </td>
+                        <td>
+                            <input type="radio" id="q16_5" name="q16" value="5">
                         </td>
                     <tr>
                         <td>
